<resources>
    <string name="app_name">apkCavosCafe202610</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="correo">Correo</string>
    <string name="passwordd">Contraseña</string>
    <string name="olvidastes_passwordd">¿Olvidaste contraseña?</string>
    <string name="content_description">descripcion del contenido</string>
</resources>