<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Registrar">

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_bg_header_police_blue"
        android:paddingHorizontal="16dp"
        android:paddingVertical="36dp"
        android:text="Vamos, a Registrarnos"
        android:textColor="@color/flesh"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="71dp"
        android:paddingHorizontal="48dp"
        android:background="@drawable/sh_bg_btn_bright_gray"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:translationZ="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegistrar01"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="72dp"
        android:paddingHorizontal="64dp"
        android:gravity="center"
        android:background="@drawable/sh_bg_btn_carmine_pink"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/registrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="24dp"
        app:hintEnabled="false"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="@string/correo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilfullname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp"
        app:hintEnabled="false"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tilCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="full name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tilfullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="@string/passwordd" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirdpassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordd">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:hint="Confirmar contraseña"
            android:paddingHorizontal="16dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/sh_bg_btn_gunmetal"
        android:text="@string/registrar"
        android:fontFamily="@font/poppins_regular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirdpassword" />

    <View
        android:id="@+id/v01"
        android:layout_width="96dp"
        android:layout_height="1dp"
        android:background="@color/carmine_pink"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrar"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_width="96dp"
        android:layout_height="1dp"
        android:background="@color/carmine_pink"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Registrate con"
        android:textStyle="bold"
        android:textColor="@color/police_blue"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/icfacebook"
        android:layout_width="108dp"
        android:layout_height="96dp"
        android:layout_margin="24dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_facebook"
        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp" />
    <ImageView
        android:id="@+id/icgoogle"
        android:layout_width="108dp"
        android:layout_height="96dp"
        android:layout_margin="24dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_google_plus"
        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp" />
    <ImageView
        android:id="@+id/icapple"
        android:layout_width="108dp"
        android:layout_height="96dp"
        android:layout_margin="24dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_apple"
        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ya tiene cuenta?"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@id/tvRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="inicia sesion"
            android:textStyle="bold"
            android:textColor="@color/carmine_pink"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>